<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="com.esti.app.scrumesti.feature.MainActivity">
  <group android:id="@+id/menuOnMain">
  <item
    android:id="@+id/action_reset"
    android:orderInCategory="100"
    android:title="@string/action_reset"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_edit"
    android:orderInCategory="200"
    android:title="@string/action_edit"
    app:showAsAction="never"/>
  <item
    android:id="@+id/action_share"
    android:orderInCategory="300"
    android:title="@string/action_share"
    app:showAsAction="never"/>
  </group>
  <item
    android:id="@+id/action_how_to"
    android:orderInCategory="400"
    android:title="@string/action_how_to"
    app:showAsAction="never"/>
  <item
    android:id="@+id/feedback"
    android:orderInCategory="400"
    android:title="@string/feedback"
    app:showAsAction="never"/>
  <!--<item-->
    <!--android:id="@+id/action_settings"-->
    <!--android:orderInCategory="400"-->
    <!--android:title="@string/action_settings"-->
    <!--app:showAsAction="never"/>-->
</menu>
