<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/app_background"
  >

  <android.support.v7.widget.CardView
    android:id="@+id/card_background"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_gravity="center"
    android:layout_marginRight="8dp"
    app:cardCornerRadius="4dp"
    android:elevation="0dp"
    app:cardBackgroundColor="@color/white"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    />

  <android.support.v7.widget.AppCompatSeekBar
    android:id="@+id/complexitySB"
    style="@style/MySeekBar"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:elevation="20dp"
    android:max="10"
    android:maxHeight="11dip"
    android:min="0"
    android:progress="0"
    android:progressDrawable="@drawable/custom_seekbar"
    android:progressTint="@color/colorComplexity"
    android:tag="complexity"
    android:thumbTint="@color/black"
    android:tickMark="@drawable/tickmark"
    app:layout_constraintBottom_toTopOf="@id/claritySB"
    app:layout_constraintLeft_toLeftOf="@id/card_background"
    app:layout_constraintRight_toRightOf="@+id/card_background"
    app:layout_constraintTop_toTopOf="@+id/card_background"
    app:layout_constraintVertical_bias="0.78"/>

  <!--android:maxHeight="16dip"-->

  <android.support.v7.widget.AppCompatSeekBar

    android:id="@+id/claritySB"
    style="@style/MySeekBar"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    android:max="10"
    android:maxHeight="6dip"
    android:min="0"
    android:thumbTint="@color/black"
    android:minHeight="4dip"
    android:progressDrawable="@drawable/custom_seekbar"
    android:progressTint="@color/colorClarity"
    android:tag="clarity"
    android:tickMark="@drawable/tickmark"
    app:layout_constraintBottom_toTopOf="@+id/dependencySB"
    app:layout_constraintLeft_toLeftOf="@id/card_background"
    app:layout_constraintRight_toRightOf="@+id/card_background"
    app:layout_constraintTop_toBottomOf="@id/complexitySB"
    />

  <android.support.v7.widget.AppCompatSeekBar
    android:id="@+id/dependencySB"
    style="@style/MySeekBar"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    android:max="10"
    android:maxHeight="6dip"
    android:min="0"
    android:minHeight="4dip"
    android:progressDrawable="@drawable/custom_seekbar"
    android:progressTint="@color/colorDependency"
    android:tag="dependency"
    android:thumbTint="@color/black"
    android:tickMark="@drawable/tickmark"
    app:layout_constraintBottom_toTopOf="@id/nextEstiButtonWraper"
    app:layout_constraintHorizontal_bias="0.975"
    app:layout_constraintLeft_toLeftOf="@id/card_background"
    app:layout_constraintRight_toRightOf="@+id/card_background"
    app:layout_constraintTop_toBottomOf="@+id/claritySB"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:elevation="20dp"
    android:text="@string/complexity"
    android:textColor="@color/black"
    app:layout_constraintBottom_toTopOf="@id/complexitySB"
    app:layout_constraintLeft_toLeftOf="@id/card_background"
    />
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_marginLeft="16dp"
    android:elevation="20dp"
    android:text="@string/clarity"
    android:textColor="@color/black"
    app:layout_constraintBottom_toTopOf="@id/claritySB"
    app:layout_constraintLeft_toLeftOf="@id/card_background"

    />
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:elevation="20dp"
    android:text="@string/dependency"
    android:textColor="@color/black"
    app:layout_constraintBottom_toTopOf="@id/dependencySB"
    app:layout_constraintLeft_toLeftOf="@id/card_background"
    />

  <FrameLayout
    android:id="@+id/nextEstiButtonWraper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@color/white"
    android:elevation="2dp"
    app:layout_constraintBottom_toBottomOf="@+id/card_background"
    app:layout_constraintLeft_toLeftOf="@+id/card_background"
    app:layout_constraintRight_toRightOf="@+id/card_background"
    >

    <Button
    android:id="@+id/nextEstiButton"
      android:textAllCaps="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
      android:layout_margin="14dp"
      android:background="@drawable/rounded_button_states"
      android:elevation="20dp"
    android:enabled="false"
    android:text="Next Esti"
      />
  </FrameLayout>
</android.support.constraint.ConstraintLayout>